--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "joi": "^17.5.0",
     "mysql2": "^2.3.3",
     "next": "12.0.7",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sequelize": "^7.0.0-alpha.2"
+    "sequelize": "^7.0.0-alpha.2",
+    "valtio": "^1.2.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
